--- a/NoiseGenerator Sim/Debug/makefile
+++ b/NoiseGenerator Sim/Debug/makefile
@@ -155,7 +155,7 @@ all: NoiseGenerator\ Sim.out
 NoiseGenerator\ Sim.out: $(OBJS) $(CMD_SRCS) $(LIB_SRCS) $(GEN_CMDS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: C5500 Linker'
-	"C:/ti/ccs6/ccsv6/tools/compiler/c5500_4.4.1/bin/cl55" -v5515 --memory_model=large -g --define=c5535 --display_error_number --diag_warning=225 --ptrdiff_size=16 -z -m"NoiseGenerator Sim.map" --stack_size=0x200 --heap_size=0x400 -i"C:/ti/ccs6/ccsv6/tools/compiler/c5500_4.4.1/lib" -i"C:/Users/NN/Desktop/DSP/v2/NoiseGenerator Sim/c55xx_csl/lib" -i"C:/Users/NN/Desktop/DSP/v2/NoiseGenerator Sim/lib" -i"C:/ti/ccs6/ccsv6/tools/compiler/c5500_4.4.1/include" --reread_libs --display_error_number --warn_sections --xml_link_info="NoiseGenerator Sim_linkInfo.xml" --rom_model --sys_stacksize=0x200 -o "NoiseGenerator Sim.out" $(ORDERED_OBJS)
+	"C:/ti/ccs6/ccsv6/tools/compiler/c5500_4.4.1/bin/cl55" -v5515 --memory_model=large -g --define=c5535 --display_error_number --diag_warning=225 --ptrdiff_size=16 -z -m"NoiseGenerator Sim.map" --stack_size=0x200 --heap_size=0x400 -i"C:/ti/ccs6/ccsv6/tools/compiler/c5500_4.4.1/lib" -i"G:/Downloads/dsp1-projekat/Projekat_0/NoiseGenerator Sim/c55xx_csl/lib" -i"G:/Downloads/dsp1-projekat/Projekat_0/NoiseGenerator Sim/lib" -i"C:/ti/ccs6/ccsv6/tools/compiler/c5500_4.4.1/include" --reread_libs --display_error_number --warn_sections --xml_link_info="NoiseGenerator Sim_linkInfo.xml" --rom_model --sys_stacksize=0x200 -o "NoiseGenerator Sim.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
